kubernetes/ingress/setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
spec:
  controller: traefik.io/ingress-controller
